[Feat] Setup JaCoCo and Sonar